// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appeal-details GET /:appealId should render a Issue a decision action button when the appealStatus is ready for final review 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title"
            data-module="govuk-notification-banner">
                <div class="govuk-notification-banner__header">
                    <h3 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Important</h3>
                </div>
                <div class="govuk-notification-banner__content">
                    <p class="govuk-notification-banner__heading">The appeal is ready for a decision.</p>
                    <p class="govuk-notification-banner__heading"><a class="govuk-notification-banner__link" href="/appeals-service/appeal-details/1/issue-decision/decision">Make a decision</a>.</p>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div><strong class="govuk-tag govuk-tag--pink single-line govuk-!-margin-bottom-4">issue decision</strong>
    <dl     class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
            <dd             class="govuk-summary-list__value">Wiltshire Council</dd>
        </div>
        </dl>
        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default1">
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-1"> Case overview</span></h2>
                </div>
                <div id="accordion-default1-content-1" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-1">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">Householder</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appeal-type"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case procedure</dt>
                            <dd class="govuk-summary-list__value">Written</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/case-procedure"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Eva Sharma</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appellant-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">Ryan Marshall</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/agent-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Linked appeals</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list"
                                "><li><a href='/appeals-service/appeal-details/1' class="govuk-link " aria-label="Appeal 7 2 5 2 8 4
                                ">725284</a></li><li><a href='/appeals-service/appeal-details/2' class="govuk-link " aria-label="Appeal 1 2 3 4 5 6
                                ">123456</a></li></ul></dd><dd class="govuk-summary-list__actions "><a class="govuk-link " href="/appeals-service/appeal-details/2/change-appeal-details/linked-appeals
                                "> Change</a></dd></div><div class="govuk-summary-list__row "><dt class="govuk-summary-list__key
                                "> Other appeals</dt><dd class="govuk-summary-list__value "><ul class="govuk-list "">
                                    <li><a href='/appeals-service/appeal-details/3' class="govuk-link" aria-label="Appeal 7 6 5 4 1 3">765413</a>
                                    </li>
                                    <li><a href='/appeals-service/appeal-details/4' class="govuk-link" aria-label="Appeal 5 2 3 4 6 7">523467</a>
                                    </li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/other-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Allocation details</dt>
                            <dd class="govuk-summary-list__value">Level: A
                                <br>Band: 3
                                <br>Specialisms:
                                <ul class="govuk-!-margin-0">
                                    <li>Historic heritage</li>
                                    <li>Architecture design</li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/allocation-details/allocation-level"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> LPA reference</dt>
                            <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision</dt>
                            <dd class="govuk-summary-list__value">dismissed</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/issue-decision/decision"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-2"> Site details</span></h2>
                </div>
                <div id="accordion-default1-content-2" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-2">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/lpa-inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appellant-case-inspector-access"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Could a neighbouring site be affected?</dt>
                            <dd                             class="govuk-summary-list__value">Yes</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/neighbouring-site-is-affected"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 1</dt>
                            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/neighbouring-site-address-0"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 2</dt>
                            <dd class="govuk-summary-list__value">FOR TRAINERS ONLY, 96 The Avenue, Kent, MD21 5XY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/neighbouring-site-address-1"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/lpa-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>Yes</span>
                                <br><span>Dogs on site</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appellant-case-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Visit type</dt>
                            <dd class="govuk-summary-list__value">Accompanied</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/site-visit/visit-booked"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-3"> Case timetable</span></h2>
                </div>
                <div id="accordion-default1-content-3" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-3">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Start date</dt>
                            <dd class="govuk-summary-list__value">23 May 2023</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> LPA Questionnaire</dt>
                            <dd class="govuk-summary-list__value">11 October 2023</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/appeal-timetables/lpa-questionnaire"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site visit</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list govuk-!-margin-top-0 govuk-!-padding-left-0">
                                    <li>9 October 2023</li>
                                    <li>9:38am - 10:44am</li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/site-visit/manage-visit"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-4"> Case documentation</span></h2>
                </div>
                <div id="accordion-default1-content-4" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-4">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Documentation</th>
                                <th scope="col" class="govuk-table__header">Status</th>
                                <th scope="col" class="govuk-table__header">Due date</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">Appellant case</th>
                                <td class="govuk-table__cell">Received</td>
                                <td class="govuk-table__cell">2 October 2024</td>
                                <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/appellant-case" class="govuk-link">Review</a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">LPA questionnaire</th>
                                <td class="govuk-table__cell">Not received</td>
                                <td class="govuk-table__cell">11 October 2024</td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-5"> Case team</span></h2>
                </div>
                <div id="accordion-default1-content-5" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-5">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case officer</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/case-officer"> Assign</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/inspector"> Assign</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
        </div>
</main>"
`;

exports[`appeal-details GET /:appealId should render a page not found when the appealId is not valid/does not exist 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Page not found</h1>
            <p class="govuk-body">If you typed the web address, check it is correct.</p>
            <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
            <p             class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists</p>
        </div>
    </div>
</main>"
`;

exports[`appeal-details GET /:appealId should render the received appeal details for a valid appealId with multiple linked/other appeals 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div><strong class="govuk-tag govuk-tag--grey single-line govuk-!-margin-bottom-4">received appeal</strong>
    <dl     class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
            <dd             class="govuk-summary-list__value">Wiltshire Council</dd>
        </div>
        </dl>
        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default1">
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-1"> Case overview</span></h2>
                </div>
                <div id="accordion-default1-content-1" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-1">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">Householder</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/appeal-type"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case procedure</dt>
                            <dd class="govuk-summary-list__value">Written</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/case-procedure"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Eva Sharma</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/appellant-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">Ryan Marshall</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/agent-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Linked appeals</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list"
                                "><li><a href='/appeals-service/appeal-details/1' class="govuk-link " aria-label="Appeal 7 2 5 2 8 4
                                ">725284</a></li><li><a href='/appeals-service/appeal-details/2' class="govuk-link " aria-label="Appeal 1 2 3 4 5 6
                                ">123456</a></li></ul></dd><dd class="govuk-summary-list__actions "><a class="govuk-link " href="/appeals-service/appeal-details/1/change-appeal-details/linked-appeals
                                "> Change</a></dd></div><div class="govuk-summary-list__row "><dt class="govuk-summary-list__key
                                "> Other appeals</dt><dd class="govuk-summary-list__value "><ul class="govuk-list "">
                                    <li><a href='/appeals-service/appeal-details/3' class="govuk-link" aria-label="Appeal 7 6 5 4 1 3">765413</a>
                                    </li>
                                    <li><a href='/appeals-service/appeal-details/4' class="govuk-link" aria-label="Appeal 5 2 3 4 6 7">523467</a>
                                    </li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/other-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Allocation details</dt>
                            <dd class="govuk-summary-list__value">Level: A
                                <br>Band: 3
                                <br>Specialisms:
                                <ul class="govuk-!-margin-0">
                                    <li>Historic heritage</li>
                                    <li>Architecture design</li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/allocation-details/allocation-level"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> LPA reference</dt>
                            <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision</dt>
                            <dd class="govuk-summary-list__value">dismissed</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/issue-decision/decision"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-2"> Site details</span></h2>
                </div>
                <div id="accordion-default1-content-2" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-2">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/lpa-inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/appellant-case-inspector-access"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Could a neighbouring site be affected?</dt>
                            <dd                             class="govuk-summary-list__value">Yes</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/neighbouring-site-is-affected"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 1</dt>
                            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/neighbouring-site-address-0"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 2</dt>
                            <dd class="govuk-summary-list__value">FOR TRAINERS ONLY, 96 The Avenue, Kent, MD21 5XY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/neighbouring-site-address-1"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/lpa-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>Yes</span>
                                <br><span>Dogs on site</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/appellant-case-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Visit type</dt>
                            <dd class="govuk-summary-list__value">Accompanied</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/site-visit/visit-booked"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-3"> Case timetable</span></h2>
                </div>
                <div id="accordion-default1-content-3" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-3">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Start date</dt>
                            <dd class="govuk-summary-list__value">23 May 2023</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> LPA Questionnaire</dt>
                            <dd class="govuk-summary-list__value">11 October 2023</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/appeal-timetables/lpa-questionnaire"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site visit</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list govuk-!-margin-top-0 govuk-!-padding-left-0">
                                    <li>9 October 2023</li>
                                    <li>9:38am - 10:44am</li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/site-visit/manage-visit"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-4"> Case documentation</span></h2>
                </div>
                <div id="accordion-default1-content-4" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-4">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Documentation</th>
                                <th scope="col" class="govuk-table__header">Status</th>
                                <th scope="col" class="govuk-table__header">Due date</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">Appellant case</th>
                                <td class="govuk-table__cell">Received</td>
                                <td class="govuk-table__cell">2 October 2024</td>
                                <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/1/appellant-case" class="govuk-link">Review</a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">LPA questionnaire</th>
                                <td class="govuk-table__cell">Not received</td>
                                <td class="govuk-table__cell">11 October 2024</td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-5"> Case team</span></h2>
                </div>
                <div id="accordion-default1-content-5" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-5">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case officer</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/assign-user/case-officer"> Assign</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/assign-user/inspector"> Assign</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
        </div>
</main>"
`;

exports[`appeal-details GET /:appealId should render the received appeal details for a valid appealId with no linked/other appeals 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div><strong class="govuk-tag govuk-tag--grey single-line govuk-!-margin-bottom-4">received appeal</strong>
    <dl     class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
            <dd             class="govuk-summary-list__value">Wiltshire Council</dd>
        </div>
        </dl>
        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default3">
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-1"> Case overview</span></h2>
                </div>
                <div id="accordion-default3-content-1" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-1">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">Householder</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/appeal-type"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case procedure</dt>
                            <dd class="govuk-summary-list__value">Written</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/case-procedure"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Eva Sharma</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/appellant-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">Ryan Marshall</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/agent-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Linked appeals</dt>
                            <dd class="govuk-summary-list__value"><span>No appeals</span>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/linked-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Other appeals</dt>
                            <dd class="govuk-summary-list__value"><span>No appeals</span>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/other-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Allocation details</dt>
                            <dd class="govuk-summary-list__value">Level: A
                                <br>Band: 3
                                <br>Specialisms:
                                <ul class="govuk-!-margin-0">
                                    <li>Historic heritage</li>
                                    <li>Architecture design</li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/allocation-details/allocation-level"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> LPA reference</dt>
                            <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision</dt>
                            <dd class="govuk-summary-list__value">dismissed</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/issue-decision/decision"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-2"> Site details</span></h2>
                </div>
                <div id="accordion-default3-content-2" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-2">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/lpa-inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/appellant-case-inspector-access"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Could a neighbouring site be affected?</dt>
                            <dd                             class="govuk-summary-list__value">Yes</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/neighbouring-site-is-affected"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 1</dt>
                            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/neighbouring-site-address-0"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 2</dt>
                            <dd class="govuk-summary-list__value">FOR TRAINERS ONLY, 96 The Avenue, Kent, MD21 5XY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/neighbouring-site-address-1"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/lpa-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>Yes</span>
                                <br><span>Dogs on site</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change-appeal-details/appellant-case-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Visit type</dt>
                            <dd class="govuk-summary-list__value">Accompanied</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/site-visit/visit-booked"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-3"> Case timetable</span></h2>
                </div>
                <div id="accordion-default3-content-3" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-3">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Start date</dt>
                            <dd class="govuk-summary-list__value">23 May 2023</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> LPA Questionnaire</dt>
                            <dd class="govuk-summary-list__value">11 October 2023</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/appeal-timetables/lpa-questionnaire"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site visit</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list govuk-!-margin-top-0 govuk-!-padding-left-0">
                                    <li>9 October 2023</li>
                                    <li>9:38am - 10:44am</li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/site-visit/manage-visit"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-4"> Case documentation</span></h2>
                </div>
                <div id="accordion-default3-content-4" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-4">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Documentation</th>
                                <th scope="col" class="govuk-table__header">Status</th>
                                <th scope="col" class="govuk-table__header">Due date</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">Appellant case</th>
                                <td class="govuk-table__cell">Received</td>
                                <td class="govuk-table__cell">2 October 2024</td>
                                <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/3/appellant-case" class="govuk-link">Review</a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">LPA questionnaire</th>
                                <td class="govuk-table__cell">Not received</td>
                                <td class="govuk-table__cell">11 October 2024</td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-5"> Case team</span></h2>
                </div>
                <div id="accordion-default3-content-5" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-5">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case officer</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/assign-user/case-officer"> Assign</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/assign-user/inspector"> Assign</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
        </div>
</main>"
`;

exports[`appeal-details GET /:appealId should render the received appeal details for a valid appealId with single linked/other appeals 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div><strong class="govuk-tag govuk-tag--grey single-line govuk-!-margin-bottom-4">received appeal</strong>
    <dl     class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
            <dd             class="govuk-summary-list__value">Wiltshire Council</dd>
        </div>
        </dl>
        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default2">
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-1"> Case overview</span></h2>
                </div>
                <div id="accordion-default2-content-1" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-1">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">Householder</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appeal-type"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case procedure</dt>
                            <dd class="govuk-summary-list__value">Written</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/case-procedure"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Eva Sharma</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appellant-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">Ryan Marshall</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/agent-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Linked appeals</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list"
                                "><li><a href='/appeals-service/appeal-details/1' class="govuk-link " aria-label="Appeal 7 2 5 2 8 4
                                ">725284</a></li></ul></dd><dd class="govuk-summary-list__actions "><a class="govuk-link " href="/appeals-service/appeal-details/2/change-appeal-details/linked-appeals
                                "> Change</a></dd></div><div class="govuk-summary-list__row "><dt class="govuk-summary-list__key
                                "> Other appeals</dt><dd class="govuk-summary-list__value "><ul class="govuk-list "">
                                    <li><a href='/appeals-service/appeal-details/3' class="govuk-link" aria-label="Appeal 7 6 5 4 1 3">765413</a>
                                    </li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/other-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Allocation details</dt>
                            <dd class="govuk-summary-list__value">Level: A
                                <br>Band: 3
                                <br>Specialisms:
                                <ul class="govuk-!-margin-0">
                                    <li>Historic heritage</li>
                                    <li>Architecture design</li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/allocation-details/allocation-level"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> LPA reference</dt>
                            <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision</dt>
                            <dd class="govuk-summary-list__value">dismissed</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/issue-decision/decision"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-2"> Site details</span></h2>
                </div>
                <div id="accordion-default2-content-2" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-2">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/lpa-inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appellant-case-inspector-access"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Could a neighbouring site be affected?</dt>
                            <dd                             class="govuk-summary-list__value">Yes</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/neighbouring-site-is-affected"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 1</dt>
                            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/neighbouring-site-address-0"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 2</dt>
                            <dd class="govuk-summary-list__value">FOR TRAINERS ONLY, 96 The Avenue, Kent, MD21 5XY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/neighbouring-site-address-1"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/lpa-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>Yes</span>
                                <br><span>Dogs on site</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appellant-case-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Visit type</dt>
                            <dd class="govuk-summary-list__value">Accompanied</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/site-visit/visit-booked"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-3"> Case timetable</span></h2>
                </div>
                <div id="accordion-default2-content-3" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-3">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Start date</dt>
                            <dd class="govuk-summary-list__value">23 May 2023</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> LPA Questionnaire</dt>
                            <dd class="govuk-summary-list__value">11 October 2023</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/appeal-timetables/lpa-questionnaire"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site visit</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list govuk-!-margin-top-0 govuk-!-padding-left-0">
                                    <li>9 October 2023</li>
                                    <li>9:38am - 10:44am</li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/site-visit/manage-visit"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-4"> Case documentation</span></h2>
                </div>
                <div id="accordion-default2-content-4" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-4">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Documentation</th>
                                <th scope="col" class="govuk-table__header">Status</th>
                                <th scope="col" class="govuk-table__header">Due date</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">Appellant case</th>
                                <td class="govuk-table__cell">Received</td>
                                <td class="govuk-table__cell">2 October 2024</td>
                                <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/appellant-case" class="govuk-link">Review</a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">LPA questionnaire</th>
                                <td class="govuk-table__cell">Not received</td>
                                <td class="govuk-table__cell">11 October 2024</td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-5"> Case team</span></h2>
                </div>
                <div id="accordion-default2-content-5" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-5">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case officer</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/case-officer"> Assign</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/inspector"> Assign</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
        </div>
</main>"
`;

exports[`appeal-details GET /:appealId should render the received appeal details for a valid appealId without start date 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div><strong class="govuk-tag govuk-tag--grey single-line govuk-!-margin-bottom-4">received appeal</strong>
    <dl     class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
            <dd             class="govuk-summary-list__value">Wiltshire Council</dd>
        </div>
        </dl>
        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default1">
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-1"> Case overview</span></h2>
                </div>
                <div id="accordion-default1-content-1" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-1">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">Householder</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appeal-type"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case procedure</dt>
                            <dd class="govuk-summary-list__value">Written</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/case-procedure"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Eva Sharma</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appellant-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">Ryan Marshall</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/agent-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Linked appeals</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list"
                                "><li><a href='/appeals-service/appeal-details/1' class="govuk-link " aria-label="Appeal 7 2 5 2 8 4
                                ">725284</a></li><li><a href='/appeals-service/appeal-details/2' class="govuk-link " aria-label="Appeal 1 2 3 4 5 6
                                ">123456</a></li></ul></dd><dd class="govuk-summary-list__actions "><a class="govuk-link " href="/appeals-service/appeal-details/2/change-appeal-details/linked-appeals
                                "> Change</a></dd></div><div class="govuk-summary-list__row "><dt class="govuk-summary-list__key
                                "> Other appeals</dt><dd class="govuk-summary-list__value "><ul class="govuk-list "">
                                    <li><a href='/appeals-service/appeal-details/3' class="govuk-link" aria-label="Appeal 7 6 5 4 1 3">765413</a>
                                    </li>
                                    <li><a href='/appeals-service/appeal-details/4' class="govuk-link" aria-label="Appeal 5 2 3 4 6 7">523467</a>
                                    </li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/other-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Allocation details</dt>
                            <dd class="govuk-summary-list__value">Level: A
                                <br>Band: 3
                                <br>Specialisms:
                                <ul class="govuk-!-margin-0">
                                    <li>Historic heritage</li>
                                    <li>Architecture design</li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/allocation-details/allocation-level"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> LPA reference</dt>
                            <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision</dt>
                            <dd class="govuk-summary-list__value">dismissed</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/issue-decision/decision"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-2"> Site details</span></h2>
                </div>
                <div id="accordion-default1-content-2" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-2">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/lpa-inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appellant-case-inspector-access"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Could a neighbouring site be affected?</dt>
                            <dd                             class="govuk-summary-list__value">Yes</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/neighbouring-site-is-affected"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 1</dt>
                            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/neighbouring-site-address-0"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 2</dt>
                            <dd class="govuk-summary-list__value">FOR TRAINERS ONLY, 96 The Avenue, Kent, MD21 5XY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/neighbouring-site-address-1"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"></dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/lpa-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>Yes</span>
                                <br><span>Dogs on site</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change-appeal-details/appellant-case-health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Visit type</dt>
                            <dd class="govuk-summary-list__value">Accompanied</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/site-visit/visit-booked"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-3"> Case timetable</span></h2>
                </div>
                <div id="accordion-default1-content-3" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-3">
                    <div class="govuk-inset-text">
                        <p class="govuk-body">Case not started</p><a href="/appeals-service/appeal-details/1/appellant-case"
                        class="govuk-link">Review appeal</a>
                    </div>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-4"> Case documentation</span></h2>
                </div>
                <div id="accordion-default1-content-4" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-4">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Documentation</th>
                                <th scope="col" class="govuk-table__header">Status</th>
                                <th scope="col" class="govuk-table__header">Due date</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">Appellant case</th>
                                <td class="govuk-table__cell">Received</td>
                                <td class="govuk-table__cell">2 October 2024</td>
                                <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/appellant-case" class="govuk-link">Review</a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">LPA questionnaire</th>
                                <td class="govuk-table__cell">Not received</td>
                                <td class="govuk-table__cell">11 October 2024</td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-5"> Case team</span></h2>
                </div>
                <div id="accordion-default1-content-5" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-5">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case officer</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/case-officer"> Assign</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/inspector"> Assign</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
        </div>
</main>"
`;
